--- a/package.json
+++ b/package.json
@@ -4,17 +4,27 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon .bin/www"
+    "dev": "nodemon .bin/www",
+    "watch": "npm-watch cloud",
+    "cloud": "npx @google-cloud/functions-framework --port=5000 --target=cloud"
+  },
+  "watch": {
+    "cloud": "*.js"
   },
   "dependencies": {
+    "@google-cloud/functions-framework": "^3.0.0",
+    "@sendgrid/mail": "^7.6.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "dayjs": "^1.10.7",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
+    "googleapis": "^95.0.0",
+    "ics": "^2.35.0",
     "mongoose": "^6.2.2",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "npm-watch": "^0.11.0"
   }
 }
