--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@google-cloud/functions-framework": "^3.0.0",
-    "@sendgrid/mail": "^7.6.1",
+    "@sendgrid/mail": "^7.6.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "dayjs": "^1.10.7",
@@ -22,6 +22,7 @@
     "express": "~4.16.1",
     "googleapis": "^95.0.0",
     "ics": "^2.35.0",
+    "moment": "^2.29.1",
     "mongoose": "^6.2.2",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15",
